--- a/less/_header.less
+++ b/less/_header.less
@@ -78,11 +78,13 @@
   width: 230px;
   margin: auto;
   height: 60px;
+  float: none;
 
   @media @s {
     text-align: left;
     width: 33.33333333333333%;
     height: auto;
+    float: left;
   }
 
   .site-logo {
