--- a/less/_menu.less
+++ b/less/_menu.less
@@ -176,6 +176,13 @@ body {
     .navbar-fixed-top {
       top: 39px;
     }
+
+    @media @s {
+      
+      .affix.navbar-fixed-top {
+        top: 39px;
+      }
+    }
   }
 
   .affix.navbar-fixed-top {
@@ -183,10 +190,6 @@ body {
   }
 
   @media @s {
-
-    .affix.navbar-fixed-top {
-      top: 39px;
-    }
   
     &.toolbar-tray-open {
   
@@ -240,13 +243,6 @@ body {
       }
     }
   }
-}
-
-
-/* Navbar
-============================*/
-.navbar {
-
 }
 
 
